--- a/styles.css
+++ b/styles.css
@@ -207,10 +207,10 @@ a {
 
     /* Reset button */
     .reset-btn {
-        background: #ffac03;
+        
         color: white;
         border: none;
-        padding: 10px 70px;
+        padding: 10px 46px;
         font-size: 16px;
         font-weight: bold;
         border-radius: 18px;
@@ -222,6 +222,13 @@ a {
         transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, .15);
     }
+    .submit{
+        background: #ffac03;
+    }
+    .reset{
+        background: #3d3d3d;
+    }
+
     .compare-sectionMobile {
         display: none;
     }
@@ -257,7 +264,15 @@ a {
       text-align: left;
       font-weight: normal;
     }
-
+     @media (max-width: 1100px) {
+    .reset-btn {
+        padding: 8px 40px;
+        font-size: 14px;
+    }
+    .label-text{
+        font-size: 16px;
+    }
+    }
 
     @media (max-width: 790px){
         .label-text{
@@ -409,8 +424,8 @@ a {
         
     }
     .reset-btn {
-        padding: 7px 56px;
-        font-size: 14px;
+        padding: 7px 38px;
+        font-size: 13px;
     }
     
   /* comparison Table Mobile View */
@@ -454,26 +469,6 @@ a {
 
 }
 
-    .circle-btn {
-            padding-bottom: 0px;
-        margin-top: 21px;
-        margin-right: 10px;
-        width: 34px;
-        height: 34px;
-        border-radius: 50%;
-        background-color: #999; /* gray background */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 35px;
-        color: white;
-        border: none;
-        cursor: pointer;
-    }
-
-    .circle-btn:hover {
-        background-color: #555; /* dark gray on hover */
-    }
     @media (max-width: 366px) {
 
         .bike-card img{
